# NoteVault

./: .gitignore
assets/windows/: icon.aps
src/: license.txt
src/android/: build.gradle  gradle.properties
src/android/app/: build.gradle  proguard-rules.pro
src/android/app/src/androidTest/java/com/akb/notevault/: ApplicationTest.java
src/android/app/src/main/: AndroidManifest.xml
src/android/app/src/main/java/com/akb/notevault/: HelpActivity.java  HelpScreen.java  NoteActivity.java  NoteList.java  NoteListActivity.java  NoteListSelection.java  NoteListSelectionActivity.java  WindowInsetHandler.java
src/android/app/src/main/java/com/akb/notevault/dialogs/: AddDialog.java  AddNoteDialog.java  AddNoteListDialog.java  ChangePasswordDialog.java  CloseChangesDialog.java  ErrorDialog.java  GeneratePasswordDialog.java  LoadingDialog.java  OnDialogAcceptedListener.java  OpenDialog.java  OpenNoteListDialog.java  RemoveDialog.java  RemoveNoteDialog.java  RemoveNoteListDialog.java  RenameDialog.java  RenameNoteDialog.java  RenameNoteListDialog.java
src/android/app/src/main/java/com/akb/notevault/io/: Crypto.java  NoteFile.java
src/android/app/src/main/java/com/akb/notevault/notes/: IdFactory.java  Note.java  NoteSet.java
src/android/app/src/main/res/drawable/: list_item.xml
src/android/app/src/main/res/layout/: activity_help_screen.xml  activity_note.xml  activity_note_list.xml  activity_note_list_selection.xml  add_note_list_dialog.xml  add_rename_note_dialog.xml  change_password_dialog.xml  list_item.xml  loading_dialog.xml  open_dialog.xml  open_note_list_dialog.xml  password_generator_dialog.xml  remove_dialog.xml  remove_note_dialog.xml  remove_note_list_dialog.xml  rename_dialog.xml  rename_note_list_dialog.xml
src/android/app/src/main/res/menu/: menu_note.xml  menu_note_list.xml  menu_note_list_selection.xml  menu_note_vault.xml
src/android/app/src/main/res/values/: strings.xml  styles.xml
src/android/gradle/wrapper/: gradle-wrapper.properties
src/desktop/: CMakeLists.txt  NoteVault.desktop  Version.h  main.cpp  main.d  notevault.desktop
src/desktop/install/: License.txt
src/desktop/install/linux/: Install.cmake  notevault.desktop.in  secure-note.xml
src/desktop/install/windows/: FileAssociation.wxs  Install.cmake
src/desktop/io/: Crypto.cpp  Crypto.h  CryptoIStream.cpp  CryptoIStream.h  CryptoOStream.cpp  CryptoOStream.h  FileIStream.cpp  FileIStream.h  FileOStream.cpp  FileOStream.h  IStream.h  NoteFile.cpp  NoteFile.h  OStream.h
src/desktop/notes/: IdFactory.cpp  IdFactory.h  Note.cpp  Note.h  NoteFile.cpp  NoteFile.h  NoteSet.cpp  NoteSet.h
src/desktop/ui/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  ConfirmCloseDialog.cpp  ConfirmCloseDialog.h  ConfirmCloseDialog.ui  GeneratePasswordDialog.cpp  GeneratePasswordDialog.h  GeneratePasswordDialog.ui  MainWindow.cpp  MainWindow.d  MainWindow.h  MainWindow.ui  OpenPasswordDialog.cpp  OpenPasswordDialog.h  OpenPasswordDialog.ui  Resources.qrc  SavePasswordDialog.cpp  SavePasswordDialog.h  SavePasswordDialog.ui
